@@ -192,4 +192,3 @@ Dist::Zilla::Plugin::UploadToCPAN = 0
 
 [Prereqs]
 Dist::Zilla::Role::ConfigDumper = 4.101540
-Dist::Zilla::Util::EmulatePhase = 0.01000101
