@@ -17,6 +17,8 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 
  [Removed / runtime requires]
  - Class::Load
+ - Dist::Zilla::Util::EmulatePhase 0.01000101
+ - Readonly
 
  [Removed / test recommends]
  - CPAN::Meta::Prereqs
